...
                                    <constraint firstAttribute="height" constant="40" id="lwA-Qq-Ljo"/>
                                </constraints>
                                <state key="normal" title="Log Out">
                                    <color key="titleColor" red="0.78992798289999999" green="0.35112627097857274" blue="0.080874840005065521" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name:" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="jRa-99-dhn" customClass="InteractiveUITextField" customModule="Peeq" customModuleProvider="tar
                                <rect key="frame" x="16" y="88" width="288" height="30"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email:" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="EAg-Z2-EMT" customClass="InteractiveUITextField" customModule="Peeq" customModuleProvider="ta
                                <rect key="frame" x="16" y="149" width="288" height="30"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password:" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="FTa-Az-P7u" customClass="InteractiveUITextField" customModule="Peeq" customModuleProvider=
                                <rect key="frame" x="16" y="210" width="288" height="30"/>
                                <constraints>
...
                                </constraints>
                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Join Now">
                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </constraints>
                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Sign Up" image="joinNow"/>
                                <connections>
                                    <segue destination="dJF-BI-ivb" kind="presentation" identifier="signupView" id="VlQ-TB-VA2"/>
...
                                </constraints>
                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mRw-qN-LLF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Me" image="ic_person" id="xaE-nT-LjV"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="G8N-XE-r6q">
...
