...
    return link
  }()

  lazy var forgetPasswordLink: UIButton = {
    let link = UIButton()
    link.setTitleColor(UIColor.redColor(), forState: .Normal)
    link.setTitle("Forget Password?", forState: .Normal)
    link.backgroundColor = UIColor.whiteColor()
    link.translatesAutoresizingMaskIntoConstraints = false
    link.titleLabel?.font = UIFont.systemFontOfSize(12)
    link.addTarget(self, action: #selector(forgetPasswordLinkTapped), forControlEvents: .TouchUpInside)
    return link
  }()
...
