...
      width: UIScreen.main.bounds.size.width, height: 60));
    navbar.setBackgroundImage(UIImage(), for: .default)
    navbar.backgroundColor = UIColor.white
    navbar.titleTextAttributes = [ NSAttributedStringKey.foregroundColor:UIColor.black]
    self.view.addSubview(navbar)

    let navItem = UINavigationItem(title: "Tutorial")
    let skipButton = UIButton(type: .custom)
    skipButton.setTitle("Skip", for: UIControlState())
    skipButton.setTitleColor(UIColor.defaultColor(), for: UIControlState())
    skipButton.addTarget(self, action: #selector(skipButtonTapped), for: .touchUpInside)
    skipButton.frame = CGRect(x: 0, y: 0, width: 60, height: 20)
    let rightBarItem = UIBarButtonItem(customView: skipButton)
    navItem.rightBarButtonItem = rightBarItem

...
