...
          }
          else {
            resultMessage = resultString
          }

          //Display success message
          let myAlert = UIAlertController(title: "OK", message: resultMessage, preferredStyle: UIAlertControllerStyle.Alert)
          let okAction = UIAlertAction(title: "Ok", style: UIAlertActionStyle.Default){ action in
            self.performSegueWithIdentifier("signupToTutorial", sender: self)
          }

          myAlert.addAction(okAction)
          NSOperationQueue.mainQueue().addOperationWithBlock {
            self.presentViewController(myAlert, animated: true, completion: nil)
...
